--- a/overlay/packages/apps/Gallery3D/res/values/config.xml
+++ b/overlay/packages/apps/Gallery3D/res/values/config.xml
@@ -18,6 +18,7 @@ limitations under the License.
 
     <integer name="max_resolution">1024</integer>
     <integer name="max_resolution_screennail">512</integer>
+    <bool name="use_32bpp_display">false</bool>
 
 </resources>
 
